--- a/BlogEngine/BlogEngine.NET/block-sound-google.html
+++ b/BlogEngine/BlogEngine.NET/block-sound-google.html
@@ -6,13 +6,13 @@
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="copyright" content="Copyright (c) AcFun">
-	<title>2015.6.4 18:25:23</title>
+	<title>2015.6.4 </title>
 </head>
 
 <body>
 	<audio id="audio" autoplay></audio>
 	<script>
-		date = 1433413523869
+		date = 0
 	</script>
 	<script src="script/sound.min.js?date=1433413523869"></script>
 </body>
